--- a/web/css/style.less
+++ b/web/css/style.less
@@ -7,6 +7,7 @@
 
 @negro-transparente: lighten(black, 70%);
 @azul-claro: lighten(blue, 15%);
+@jquery: #4297D7;
 /*
 * {
 	border: 1px dashed grey;
@@ -14,7 +15,7 @@
 */
 #contenedor {
 	
-	// display: flex;
+	//display: none;
 	// flex-direction: row;
 	// flex-wrap: wrap;
 
@@ -29,7 +30,7 @@
 		#logo {
 
 			font-family: 'Bangers', cursive;
-			background-color: @negro-transparente;;
+			background-color: @jquery;
 			height: 25px;
 			padding: 0px;
 			margin: 5px;
@@ -72,6 +73,8 @@
 
 			i {
 				float: right;
+				cursor: pointer;
+				//color: @negro-transparente;
 				//padding-left: 5px;
 			}
 
@@ -87,6 +90,40 @@
 
 			}
 
+		}
+
+		#municipios {
+			
+			order: 3;
+			margin: 5px;
+
+			select {
+
+			}
+
+		}
+
+		#botones {
+			
+			order:4;
+			padding: 5px;
+
+			i {
+				margin: 5px;
+				//padding: 5px;
+				//width: 20px;
+			}
+
+			.fa-star {
+				color: yellow;
+				text-shadow:-2px -2px 1px @azul-claro, 2px 2px 1px @azul-claro, -2px 2px 1px @azul-claro, 2px -2px 1px @azul-claro;
+			}
+
+			.fa-facebook {
+				color: @azul-claro;
+				text-shadow:-2px -2px 1px white, 2px 2px 1px white, -2px 2px 1px white, 2px -2px 1px white;
+			}
+			
 		}
 
 	}
@@ -163,6 +200,61 @@
 }
 
 select {
+
 	border-radius: 5px;
 	border: 1px solid @negro-transparente;
+
 }
+
+.boton {
+
+		margin: 5px;
+		//border: 1px solid @negro-transparente;
+		border-radius: 25px;
+		padding: 5px;
+		//padding: 5px;
+		height: 25px;
+		width: 25px;
+		background-color: @jquery;
+		cursor: pointer;
+
+		&:hover {
+			background-color: darken(@jquery, 20%);
+		}
+}
+/*
+#cargando {
+
+	font-family: 'Bangers', cursive;
+	background-color: @negro-transparente;;
+	height: 25px;
+	padding: 0px;
+	margin: 5px;
+	border-radius: 10px;
+	order: 0;
+	position: absolute; 
+	top:50%; 
+	left:50%;  
+	margin-left:-200px;
+	margin-top:-150px; 
+	border:1px solid #808080; 
+	padding:5px;
+	
+	img {
+		width: 30px;
+		height: 50px;
+		padding:2px 0px 0px 8px;
+	}
+
+	p {
+		font-size: 20px;
+		color: @azul-claro;
+		padding: 2px 0px 0px 8px;
+		margin: 0px 0px 0px 0px;
+		letter-spacing: 10px;
+		text-shadow:-2px -2px 1px white, 2px 2px 1px white, -2px 2px 1px white, 2px -2px 1px white;
+		float: right;
+	}
+
+}
+*/
