--- a/web/css/style.less
+++ b/web/css/style.less
@@ -13,17 +13,25 @@
 	border: 1px dashed grey;
 }
 */
+body {
+	
+	display: flex;
+  	align-items: center;
+  	justify-content: center;
+
 #contenedor {
 	
 	//display: none;
 	// flex-direction: row;
 	// flex-wrap: wrap;
+	//justify-content:center;
 
 	#encabezado {
 		
 		display: flex;
 		flex-direction: row;
 		align-items: center;
+		//justify-content: center;
 		//order:0;
 		//width: 100%;
 		
@@ -96,6 +104,7 @@
 			
 			order: 3;
 			margin: 5px;
+			display: none;
 
 			select {
 
@@ -107,6 +116,7 @@
 			
 			order:4;
 			padding: 5px;
+			display: none;
 
 			i {
 				margin: 5px;
@@ -120,8 +130,24 @@
 			}
 
 			.fa-facebook {
-				color: @azul-claro;
+				color: white;
+				text-shadow:-2px -2px 1px #3B579D, 2px 2px 1px #3B579D, -2px 2px 1px #3B579D, 2px -2px 1px #3B579D;
+			}
+
+			.fa-twitter {
+				color: #00ACEE;
 				text-shadow:-2px -2px 1px white, 2px 2px 1px white, -2px 2px 1px white, 2px -2px 1px white;
+			}
+
+			.fa.linkedin {
+				color: #007BB6;
+				text-shadow:-2px -2px 1px white, 2px 2px 1px white, -2px 2px 1px white, 2px -2px 1px white;
+				
+			}
+
+			.fa-google {
+				color: white;
+				text-shadow:-2px -2px 1px #AC2D1E, 2px 2px 1px #AC2D1E, -2px 2px 1px #AC2D1E, 2px -2px 1px #AC2D1E;
 			}
 			
 		}
@@ -132,7 +158,7 @@
 		
 		display: flex;
 		flex-direction: row;
-		border: 1px solid @negro-transparente;
+		//border: 1px solid @negro-transparente;
 		margin: 5px;
 		height: 500px;
 		//order: 1;
@@ -140,22 +166,86 @@
 		#izquierda {
 			
 			order: 0;
-			border: 1px solid @negro-transparente;
+			//border: 1px solid @negro-transparente;
 			margin: 5px;
-			width: 60%;
+			//padding: 5px;
+			//width: 750px;
 
 			#filtro-arriba {
-				border: 1px solid @negro-transparente;
-				margin: 5px;
-				height: 10%;
+				//border: 1px solid @negro-transparente;
+				margin: 10px 5px 5px 5px;
+				height: 45px;
+				//width: 100%;
+				display: flex;
+				flex-direction: row;
+				align-items: center;
+				padding: 5px;
+				justify-content: center;
+				background-color: @jquery;
+				border-radius: 70px;
+
+				#precio {
+					
+					order: 0;
+					margin: 5px;
+					padding: 5px;
+
+					#precio-desde {
+						
+						margin: 5px;
+						padding: 5px;
+						border-radius: 10px;
+						width: 50px;
+						border: 1px @negro-transparente solid;
+
+					}
+
+					#precio-hasta {
+						
+						margin: 5px;
+						padding: 5px;
+						border-radius: 10px;
+						width: 50px;
+						border: 1px @negro-transparente solid;
+				
+					}
+
+				}
+
+				#dormitorios {
+					
+					order: 1;
+					margin: 5px;
+					padding: 5px;
+
+					#select-dormitorios {
+						margin: 5px;
+					}
+
+				}
+
+				#baños {
+					
+					order: 2;
+					margin: 5px;
+					padding: 5px;
+
+					#select-baños {
+						margin: 5px;
+					}
+
+				}
+
+
 			}
 
 			#mapa {
 				border: 1px solid @negro-transparente;
-				margin: 5px;
+				margin: 10px;
 				padding: 5px;
 				height: 90%;
-				width: 100%;
+				border-radius: 10px;
+				//width: 100%;
 			}
 
 		}
@@ -163,7 +253,7 @@
 		#derecha{
 			
 			order: 1;
-			border: 1px solid @negro-transparente;
+			//border: 1px solid @negro-transparente;
 			margin: 5px;
 			width: 40%;
 
@@ -208,19 +298,28 @@ select {
 
 .boton {
 
-		margin: 5px;
-		//border: 1px solid @negro-transparente;
-		border-radius: 25px;
-		padding: 5px;
-		//padding: 5px;
-		height: 25px;
-		width: 25px;
-		background-color: @jquery;
-		cursor: pointer;
+	border:1px solid #67bcd1; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:12px;font-family:arial, helvetica, sans-serif; padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3);font-weight:bold; color: #FFFFFF;
+	background-color: #92cfde; background-image: -webkit-gradient(linear, left top, left bottom, from(#92cfde), to(#76bdd1));
+	background-image: -webkit-linear-gradient(top, #92cfde, #76bdd1);
+	background-image: -moz-linear-gradient(top, #92cfde, #76bdd1);
+	background-image: -ms-linear-gradient(top, #92cfde, #76bdd1);
+	background-image: -o-linear-gradient(top, #92cfde, #76bdd1);
+	background-image: linear-gradient(to bottom, #92cfde, #76bdd1);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#92cfde, endColorstr=#76bdd1);
+	border-radius: 70px;
+	width: 15px;
+	height: 15px;
+	margin: 5px;
+	cursor: pointer;
 
-		&:hover {
-			background-color: darken(@jquery, 20%);
-		}
+	&:hover{
+		 border:1px solid #44adc6;
+		 background-color: #6bbed2; background-image: -webkit-gradient(linear, left top, left bottom, from(#6bbed2), to(#50abc4));
+		 background-image: -webkit-linear-gradient(top, #6bbed2, #50abc4);
+		 background-image: -moz-linear-gradient(top, #6bbed2, #50abc4);
+		 background-image: -ms-linear-gradient(top, #6bbed2, #50abc4);
+		 background-image: -o-linear-gradient(top, #6bbed2, #50abc4);
+		 background-image: linear-gradient(to bottom, #6bbed2, #50abc4);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#6bbed2, endColorstr=#50abc4);
+	}
 }
 /*
 #cargando {
@@ -258,3 +357,5 @@ select {
 
 }
 */
+
+}
